chore(wercker): add slack-notify steps

--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,9 @@ build:
       - validate-wercker-step
   after-steps:
       - script:
-          code: | 
-            export WERCKER_SLACK_NOTIFY_INCOMMING_WEBHOOK_URL=$SLACK_INCOMMING_WEBHOOK_URL
+          code: |
+            export WERCKER_SLACK_NOTIFY_URL=$SLACK_INCOMMING_WEBHOOK_URL
             sh ./run.sh
+      - repro/slack-notify:
+          incomming_webhook_url: $SLACK_INCOMMING_WEBHOOK
 
